1557.	[bug]		marcin
	Added support for "reservation-mode" parameter in the shared network
	configuration parsers. It corrects a bug in Configuration Backend
	whereby host reservation mode was not stored in the database when
	specified via remote-network4-set command.
	(Gitlab #517,!301, git e6533001e9d850432254d3cfe995a4f7abcee6e2)

1556.	[bug]		fdupont
	Corrected parser for option definitions to refuse definitions with
	duplicate code or name.
	(Gitlab #503,!246, git 0befb653277463cd8f88740119fe90a93dbb1466)

1555.	[bug]		fdupont
	Corrected parsers for option definitions to prevent setting out of
	range option code values.
	(Gitlab #500,!247, git 5c139602d7656df74060fee63461ffba4f290547)

1554.	[func]		tmark
	kea-dhcp6 now uses globals, option definitions, options,
	share-networks, and subnets from configuration back ends.
	(Gitlab #413,!288, git ff367e273ed8763b354db272c5955a78203d865e)

1553.	[func]		marcin
	DHCPv4 server automatically fetches incremental configuration updates
	from the configuration backends.
	(Gitlab #103,!277, git 319f7709edb40d6c01390a34942b9d4a200b333e)
	(Gitlab #103,!289, git 80087e2d0f90f9ba6623860fed4f4d33ee935ad0)

1552.	[bug]		marcin
	Corrected inheritance of the subnet and shared network specific
	parameters in the MySQL Configuration Backend.
	(Gitlab #552,!295, git 4812e4227a57b29bfa3995e71588233424a3abb1)

1551.	[func]		razvan
	Added consistency and serial-consistency parameters to CQL
	connection. Fixed all statements.
	(Gitlab #16,!287, git 56a9b6a860899274f9cafe2366a6731a46490e92)

1550.	[func]		marcin
	Implemented inheritance of the DHCPv4 global and shared network
	specific configuration parameters when using configuration
	backend.
	(Gitlab #490,!284, git 2508f942e879ef74b20c07ffdba37d187d6ea932)

1549.	[func]		tmark
	kea-dhcp6 can now be configured to fetch data from configuration
	back ends. It does not yet utilize the data fetched.
	(Gitlab #104,!290, git d8a25c1ecd17ad24bdce6af19e7a42ce66d4c4f2)

1548.	[func]		razvan